<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <RadioGroup
        android:id="@+id/radioGroupAdminUserRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioRoleCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_role_customer" />

        <RadioButton
            android:id="@+id/radioRoleEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_role_employee" />

        <RadioButton
            android:id="@+id/radioRoleAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_role_admin" />
    </RadioGroup>
</LinearLayout>
